; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/rmgrdesc/extr_mxactdesc.c_multixact_identify.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/rmgrdesc/extr_mxactdesc.c_multixact_identify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XLR_INFO_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"ZERO_OFF_PAGE\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"ZERO_MEM_PAGE\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"CREATE_ID\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"TRUNCATE_ID\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @multixact_identify(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @XLR_INFO_MASK, align 4
  %6 = xor i32 %5, -1
  %7 = and i32 %4, %6
  switch i32 %7, label %12 [
    i32 128, label %8
    i32 129, label %9
    i32 131, label %10
    i32 130, label %11
  ]

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %12

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %12

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %12

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %12

12:                                               ; preds = %1, %11, %10, %9, %8
  %13 = load i8*, i8** %3, align 8
  ret i8* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
